2008-10-25  Philip Withnall  <philip@tecnocode.co.uk>

	* src/widgets/led.c:
	* src/widgets/seven-segment-display.c: Change the LED and SSD colours
	so there's better contrast between the on and off states.

============ Version 0.1.1

2008-10-20  Philip Withnall  <philip@tecnocode.co.uk>

	* NEWS:
	* configure.ac: Bump to version 0.1.1.

2008-10-20  Philip Withnall  <philip@tecnocode.co.uk>

	* config.h.in: Updated due to tool updates.
	* data/mcus.ui: Re-oriented bottom tabs to prevent crash on Windows.
	(Having them oriented vertically caused negative pixmap widths.)
	* po/Makefile.in.in: Updated due to tool updates.
	* src/interface.c: Fixed some potential security holes, where
	unescaped strings were passed to printf-style functions as format
	strings.

============ Version 0.1.0

2008-09-05  Philip Withnall  <philip@tecnocode.co.uk>

	* NEWS:
	* README: Updated the documentation ready for release.
	* src/compiler.c: Removed an unused variable.

2008-09-04  Philip Withnall  <philip@tecnocode.co.uk>

	* data/mcus.ui: Fixed some UI padding niggles.
	* data/ocr-assembly.lang:
	* src/compiler.c:
	* src/compiler.h:
	* src/instructions.h: Added support for a $SET preprocessor directive
	to allow memory locations to be set to specific values, which is
	useful for the readtable built-in subroutine.

2008-08-31  Philip Withnall  <philip@tecnocode.co.uk>

	* data/mcus.ui:
	* src/interface.c:
	* src/main.c:
	* src/main.h:
	* src/simulation.c:
	* src/simulation.h: Upgrade the stack to be dynamic, and ensure the
	entire microcontroller state is stored in each stack frame, rather than
	just a return address.

2008-08-30  Philip Withnall  <philip@tecnocode.co.uk>

	* src/compiler.c: Fix constant addressing for jump instructions.

2008-08-26  Philip Withnall  <philip@tecnocode.co.uk>

	* data/mcus.ui:
	* src/input-port.c:
	* src/main-window.c: Fix some problems with the input devices connected
	to the input port.

2008-08-17  Philip Withnall  <philip@tecnocode.co.uk>
